--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ nav {
 
 .navbar {
   max-width: 1200px;
+  padding: 0 2em;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -113,6 +114,7 @@ nav {
 main {
   margin: 5em auto;
   max-width: 1200px;
+  padding: 0 2em;
 }
 
 .hero {
@@ -151,4 +153,60 @@ main {
 
 .feature__title {
   margin-bottom: 0.8em;
+}
+
+.navbar__menu {
+  display: none;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
+
+.navbar__menu svg {
+  width: 100%;
+  height: 100%;
+  stroke: #fff;
+}
+
+/* BREAKPOINTS */
+@media (max-width: 780px) {
+  .navbar__links {
+    display: none;
+  }
+
+  .navbar__cta {
+    display: none;
+  }
+
+  .navbar__menu {
+    display: block;
+  }
+
+  .navbar__links.active {
+    position: absolute;
+    display: flex;
+    left: 0;
+    right: 0;
+    padding: 1em;
+    top: 62px;
+    background: var(--gray);
+  }
+
+  .hero {
+    display: block;
+  }
+
+  .hero__text {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2em;
+  }
+
+  .hero__img img {
+    width: 100%;
+  }
+
+  .features {
+    grid-template-columns: 1fr;
+  }
 }
